--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,12 @@ on:
     tags:
       - 'reptyr-*.*'
       - 'reptyr-*.*.*'
-permissions: read-all
 
 jobs:
   linux:
     runs-on: ubuntu-latest
     container: debian:buster
-    name: "Debian Buster"
+    name: "x86 Python 2"
     steps:
       - uses: actions/checkout@v2.3.4
         with:
@@ -24,3 +23,25 @@ jobs:
       - run: . venv/bin/activate && make test
       - run: make clean
       - run: . venv/bin/activate && env CFLAGS=-m32 LDFLAGS=-m32 NO_TEST_STEAL=1 make test
+  linux_arm64:
+    runs-on: ubuntu-latest
+    name: "arm64"
+    steps:
+      - uses: actions/checkout@v2.3.4
+        with:
+          persist-credentials: false
+      - uses: uraimo/run-on-arch-action@v2.0.10
+        id: run-on-arch
+        with:
+          arch: aarch64
+          distro: ubuntu20.04
+          githubToken: ${{ github.token }}
+          shell: /bin/bash
+          dockerRunArgs: --privileged
+          install: |
+            apt-get update
+            apt-get -y install libcap-dev gcc python3 python3-virtualenv python3-dev make
+          run: |
+            virtualenv venv
+            venv/bin/pip install -r test/requirements.txt
+            . venv/bin/activate && make test PYTHON_CMD=python3
